--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-    <title>Francesca Guiducci</title>
+    <title>Ethan Miller</title>
 </head>
 <body>
       <div>
